--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     
     <div class="button-container">
-        <button class="button continue" onclick="location.href='https://seu-link-externo.com'">Continuar</button>
+        <button class="button continue" onclick="location.href='https://xrabanada.github.io/Fase0032/introducao.html'">Continuar</button>
         <button class="button quit" onclick="alert('Você desistiu! Até a próxima.')">Desistir</button>
     </div>
 </body>
