--- a/introducao.html
+++ b/introducao.html
@@ -73,7 +73,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.toLowerCase() === "ragnatales") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/233jeiwiu3u.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
