--- a/233jeiwiu3u.html
+++ b/233jeiwiu3u.html
@@ -79,7 +79,7 @@
         function solicitarSenha() {
             var senha = prompt("Assistindo 3 horas de live e dando o apoio no site do Tales, quantos pontos eu vou ter?");
             if (senha && senha.trim() === "154") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/qualseupedido.html';
             } else {
                 alert("Resposta incorreta! Tente novamente.");
             }
