--- a/qualseupedido.html
+++ b/qualseupedido.html
@@ -63,6 +63,7 @@
 <body>
     <h1>Olha, a nossa padaria está funcionando quase 24 horas por dia e infelizmente nosso WhatsApp está com problema.</h1>
     <h2>Por favor, faça seu pedido via email: <a href="mailto:padariadorabanada@gmail.com">padariadorabanada@gmail.com</a></h2>
+    <h2> talvez a confirmação de seu pedido venha chegar por outro lugar alem da caixa de entrada</h2>
     <div class="button-container">
         <button class="button" onclick="solicitarSenha()">Continuar</button>
     </div>
