--- a/qualseupedido.html
+++ b/qualseupedido.html
@@ -36,7 +36,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim().toLowerCase().replace(/\s+/g, " ") === "chateado") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/MoscoviaOurdear253166.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
