--- a/escutaoaudio.html
+++ b/escutaoaudio.html
@@ -39,7 +39,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim().toLowerCase().replace(/\s+/g, " ") === "obrigado sheep") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/nuncamais.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
