--- a/caixinhanhamnham.html
+++ b/caixinhanhamnham.html
@@ -81,7 +81,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim() === "8") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/hmmmana.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
