--- a/olhaadatabase.html
+++ b/olhaadatabase.html
@@ -49,7 +49,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim().toLowerCase().replace(/\s+/g, " ") === "torrada crocante") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/girandoooooo.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
