--- a/MoscoviaOurdear253166.html
+++ b/MoscoviaOurdear253166.html
@@ -48,7 +48,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim().toLowerCase().replace(/\s+/g, " ") === "csar alexsay iii") {
-                location.href = 'https://seu-link-externo.com';
+                location.href = 'https://xrabanada.github.io/Fase0032/olhaadatabase.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
