--- a/bobinho.html
+++ b/bobinho.html
@@ -41,7 +41,7 @@
         function solicitarSenha() {
             var senha = prompt("Digite a senha para continuar:");
             if (senha && senha.trim().toLowerCase().replace(/\s+/g, " ") === "você não é tão bobo assim") {
-                location.href = 'https://xrabanada.github.io/Fase0032/caixinhanhamnham.html';
+                location.href = 'https://xrabanada.github.io/Fase0032/hmmmana.html';
             } else {
                 alert("Senha incorreta! Tente novamente.");
             }
