--- a/nuncamais.html
+++ b/nuncamais.html
@@ -51,7 +51,7 @@
     <h1>Parabéns, você acertou tudo!</h1>
     <h2>É, você talvez venha a merecer...</h2>
     <p>Envie no meu privado do Discord o seguinte código:</p>
-    <div class="code">JJ#EIIXLWOE</div>
+    <div class="code">JJ#EIIee2XLWOE</div>
     <p>Caso você tenha sido o primeiro, parabéns! Você ganhou 40k de cash :)</p>
 </body>
 </html>
