--- a/escutaoaudio.html
+++ b/escutaoaudio.html
@@ -19,6 +19,10 @@
         h1 {
             color: #333;
         }
+
+  h3 {
+            color: #333;
+        }
         .button-container {
             margin-top: 20px;
         }
@@ -64,7 +68,7 @@
 
 </head>
 <body>
-    <h1>Eu tive que ouvir esse áudio 10x...</h1>
+    <h1>Eu tive que ouvir esse áudio 10x...</h1><h3>Eu botaria no capcut</h1>
     <audio controls>
         <source src="som.mp3" type="audio/mpeg">
         Seu navegador não suporta o elemento de áudio.
