--- a/nuncamais.html
+++ b/nuncamais.html
@@ -53,5 +53,8 @@
     <p>Envie no meu privado do Discord o seguinte código:</p>
     <div class="code">JJ#EIIee2XLWOE</div>
     <p>Caso você tenha sido o primeiro, parabéns! Você ganhou 40k de cash :)</p>
+<p> talvez esse tenha sido o verdadeiro final?</p>
+
+    <button class="small-button" onclick="window.open('https://discord.gg/nMFbMpgGkU', '_blank')">Ir para o Discord</button>
 </body>
 </html>
